[package]
name = "bevy_sprite_sheet"
version = "1.0.0"
edition = "2024"

[dependencies]
bevy_app = "0.16.0"
bevy_asset = "0.16.0"
bevy_ecs = "0.16.0"
bevy_render = "0.16.0"
bevy_image = "0.16.0"
bevy_reflect = "0.16.0"
bevy_reflect_derive = "0.16.0"
bevy_state = "0.16.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bevy_common_assets = { version = "0.13.0", features = ["json"]}
pad = {git = "https://github.com/Warhorst/pad.git", tag = "1.0.0"}