[package]
name = "bevy_sprite_sheet"
version = "1.0.0"
edition = "2024"

[dependencies]
bevy_app = "0.17"
bevy_asset = "0.17"
bevy_ecs = "0.17"
bevy_render = "0.17"
bevy_image = "0.17"
bevy_reflect = "0.17"
bevy_reflect_derive = "0.17"
bevy_state = "0.17"
serde = { version = "1.0.137", features = ["derive"] }
bevy_common_assets = { version = "0.14", features = ["json"]}
pad = {git = "https://github.com/Warhorst/pad.git", tag = "1.1.0"}